--- a/Nociones.html
+++ b/Nociones.html
@@ -4,16 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo</title>
+    <link rel="icon" href="Favicon.png" type="image/png">
+    <title>Bases HTML</title>
 </head>
 <body>
-    <h1> Tipos de datos primitivos en java </h1>
+    <h1 style="Background-color: rgb(109, 211, 224)"> Tipos de datos primitivos en java </h1>
     <h2> Tipo int </h2>
     <p> Es un tipo de datos numéricos de 32 bits, entero con signo <br>
     Su rango va desde -2e31 hasta 2e31 - 1</p>
     <h2> Tipo float </h2>
-    <p>Es un tipo de datos para almacenar números decimales con precisión de 64 bits </p>
-    
+    <p>Es un tipo de datos para almacenar números decimales con precisión de 64 bits 
+    <em> 64 bits </em></p>
+    <a href="http://www.google.com"> ir a google </a> <br>
+    <br>
+    <a href="HolaMundo.html">Ir a HolaMundo</a> <br>
+    <img src="Primavera.jpg" alt="foto Primavera" width="733" height="489">
+    <h3>Lenguajes de programación</h3>
+    <ol>
+        <li>Java</li>
+        <li>Python</li>
+        <li>JavaScript</li>
+    </ol>
+    <ul>
+        <li>Java</li>
+        <li>Python</li>
+        <li>JavaScript</li>
+    </ul>
+    <iframe width="684" height="385" src="https://www.youtube.com/embed/lFcSrYw-ARY" title="Beautiful Relaxing Music for Stress Relief ~ Calming Music ~ Meditation, Relaxation, Sleep, Spa" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <br>
+    <table border = "2" width="100%">
+        <caption>Tipos de datos primitivos en Java</caption>
+        <tr>
+            <th>Tipo</th>
+            <th>Tamaño</th>
+            <th>Valor máximo</th>
+        </tr>
+        <tr>
+            <td>Tipo int</td>
+            <td>32 bits</td>
+            <td>2e31 - 1</td>
+        </tr>
+        <tr>
+            <td>Tipo float</td>
+            <td>64 bits</td>
+            <td>3.402826e38</td>
+        </tr>
+    </table>
     
 </body>
 </html>
