--- a/HtmlEstilo.html
+++ b/HtmlEstilo.html
@@ -10,5 +10,8 @@
 <body>
     <h1>Título</h1>
     <h2>Título 2</h2>
+    <h3>Titulo 3</h3>
+    <h4 id='#t4'>Titulo 4</h4>
+    <p class="es">Este es un párrafo de prueba</p>
 </body>
 </html>
