--- a/bsNavCard.html
+++ b/bsNavCard.html
@@ -12,7 +12,48 @@
 </head>
 <body>
     <div class="container-fluid">
-        <nav></nav>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <ul class="navbar nav">
+                <li class="nav-item">
+                    <a href="bsLogin.html" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="bsTabla.html" class="nav-link">Tabla</a>
+                </li>
+                <li class="nav-item">
+                    <a href="bsGrilla.html" class="nav-link">Grilla</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    No bootstrap
+                    </a>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="Formulario.html">Formulario</a></li>
+                    <li><a class="dropdown-item" href="HolaMundo.html">HolaMundo</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="HtmlEstilo.html">HtmlEstilo</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
     </div>
+    <div class="container">
+        <h1>Cards en bootstrap</h1>
+        <div class="row">
+            <div class="col-md">
+                <div class="card text-center">
+                    <img src="Favicon.png" alt="Favicon" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-tittle">Favicon Ejemplo</h4>
+                        <p class="card-text">Información relevnte en esta área, la idea es describir el producto</p>
+                        <a href="#" class="btn btn-primary">Entrar</a>
+                    </div> 
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
