Agregué más items de venta

--- a/bsNavCard.html
+++ b/bsNavCard.html
@@ -45,14 +45,32 @@
                     <img src="Favicon.png" alt="Favicon" class="card-img-top">
                     <div class="card-body">
                         <h4 class="card-tittle">Favicon Ejemplo</h4>
-                        <p class="card-text">Información relevnte en esta área, la idea es describir el producto</p>
+                        <p class="card-text">Información relevante en esta área, la idea es describir el producto</p>
                         <a href="#" class="btn btn-primary">Entrar</a>
                     </div> 
                 </div>
             </div>
-
-        </div>
-
+            <div class="col-md">
+                <div class="card text-center">
+                    <img src="the-hunger-games.jpg" alt="libro" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">libro</h4>
+                        <p class="card-text">Libro en inglés</p>
+                        <a href="#" class="btn btn-primary">Entrar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card text-center">
+                    <img src="portatil.png" alt="portatil" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Portátil de alta gama</h4>
+                        <p class="card-text">Portatil de disco duro ssd 1 T, con memoria RAM de 32 GB con Windows 11</p>
+                        <a href="#" class="btn btn-primary">Entrar</a>
+                    </div>
+                </div>
+            </div>
+        </div>   
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
